@@ -1,0 +1,1 @@
+remove-on-upgrade /etc/chromium/policies/recommended/duckduckgo.json
