@@ -1,4 +1,3 @@
 usr/bin
 
 etc/chromium.d
-etc/chromium/policies/recommended
