@@ -18,4 +18,3 @@ debian/etc/apikeys etc/chromium.d
 debian/etc/extensions etc/chromium.d
 debian/etc/default-flags etc/chromium.d
 debian/etc/master_preferences etc/chromium
-debian/etc/duckduckgo.json etc/chromium/policies/recommended
