@@ -1,9 +1,0 @@
-{
-  "DefaultSearchProviderEnabled":true,
-  "DefaultSearchProviderName": "DuckDuckGo",
-  "DefaultSearchProviderIconURL":"https://duckduckgo.com/favicon.ico",
-  "DefaultSearchProviderEncodings":["UTF-8"],
-  "DefaultSearchProviderSearchURL":"https://duckduckgo.com/?q={searchTerms}",
-  "DefaultSearchProviderSuggestURL":"https://duckduckgo.com/ac/?q={searchTerms}&type=list",
-  "DefaultSearchProviderNewTabURL":"https://duckduckgo.com/chrome_newtab",
-}
